--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-faiss_gpu==1.7.2
-h5py==3.7.0
-langchain==0.2.5
-langchain-community==0.2.5
-einops==0.8.0
-numpy==1.23.5
-Requests==2.32.3
-sentence_transformers==2.7.0
-tiktoken==0.7.0
-tinydb==4.8.0
-torch==2.1.0
-tqdm==4.66.4
-transformers==4.35.1
+#faiss_gpu==1.7.2
+h5py
+langchain
+langchain-community
+einops
+numpy
+Requests
+sentence_transformers
+tiktoken
+tinydb
+torch
+tqdm
+transformers
